--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   web:
     build: .
     ports:
-      - "8000:80"
+      - "8000:8000"
     volumes:
       - ".:/app:rw"
       - "node_modules:/app/node_modules"
-    command: npm run dev -- --host 0.0.0.0 --port 80
+    command: npm run develop -- --host 0.0.0.0
 
 volumes:
   node_modules:
